stack/k8s/okro/addons/logging/fluentd-aggregator.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: fluentd-aggregator
  namespace: okro-system
  labels:
    k8s-app: fluentd-aggregator
    component: log-aggregator
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-aggregator
      component: log-aggregator
  replicas: 2
  minReadySeconds: 5
  progressDeadlineSeconds: 15
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: "100%"
  template:
    metadata:
      labels:
        k8s-app: fluentd-aggregator
        component: log-aggregator
    spec:
      containers:
      - name: fluentd-aggregator
        image: 520887410018.dkr.ecr.eu-west-1.amazonaws.com/okro/fluentd:v1.2.2
        resources:
          limits:
            cpu: 2
            memory: 1024Mi
          requests:
            cpu: 0.5
            memory: 250Mi
        ports:
        - name: fwd-input
          containerPort: 24224
          protocol: TCP
        - name: http-metrics
          containerPort: 24231
          protocol: TCP
        - name: http-monitor
          containerPort: 24220
          protocol: TCP
        - name: http-input
          containerPort: 9880
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 24224
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: fluentd-config
          mountPath: /etc/fluentd/config
      volumes:
      - name: fluentd-config
        configMap:
          name: fluentd-config
      # Give the aggregator ample time to flush it's logs
      terminationGracePeriodSeconds: 160
      serviceAccountName: fluentd-aggregator
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8s-app
                operator: In
                values:
                - fluentd-aggregator
            topologyKey: failure-domain.beta.kubernetes.io/zone

---
apiVersion: v1
kind: Service
metadata:
  name: fluentd-aggregator
  namespace: okro-system
  labels:
    k8s-app: fluentd-aggregator
spec:
  type: ClusterIP
  selector:
    k8s-app: fluentd-aggregator
  ports:
  - name: fluentd-input
    port: 24224
    targetPort: fwd-input
    protocol: TCP
  # Exposes Prometheus metrics
  - name: http-metrics
    port: 24231
    targetPort: http-metrics
    protocol: TCP
  # Can be accessed using "kubectl proxy" at:
  # http://127.0.0.1:8001/api/v1/proxy/namespaces/kube-system/services/fluentd-aggregator:monitor-agent/api/plugins.json
  - name: http-monitor
    port: 24220
    targetPort: http-monitor
    protocol: TCP
