stack/k8s/okro/addons/logging/fluentd.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: okro-system
  labels:
    k8s-app: fluentd
    component: logging-agent
  annotations:
    scheduler.alpha.kubernetes.io/critical-pod: ''
    seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
spec:
  minReadySeconds: 10
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: fluentd
    spec:
      containers:
      - name: fluentd
        image: 520887410018.dkr.ecr.eu-west-1.amazonaws.com/okro/fluentd:v1.2.2
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - name: http-metrics
          containerPort: 24231
          protocol: TCP
        - name: http-monitor
          containerPort: 24220
          protocol: TCP
        - name: http-input
          containerPort: 9880
          protocol: TCP
        livenessProbe:
          httpGet:
            # Use percent encoding for query param.
            # The value is {"log": "health check"}.
            # the endpoint itself results in a new fluentd
            # tag 'fluentd.pod-healthcheck'
            path: /fluentd.pod.healthcheck?json=%7B%22log%22%3A+%22health+check%22%7D
            port: 9880
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: fluentd-config
          mountPath: /etc/fluentd/config
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluentd-config
        configMap:
          name: fluentd-config
      terminationGracePeriodSeconds: 60
      serviceAccountName: fluentd
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists

---
apiVersion: v1
kind: Service
metadata:
  name: fluentd
  namespace: okro-system
  labels:
    k8s-app: fluentd
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    k8s-app: fluentd
  ports:
  # Exposes Prometheus metrics
  - name: http-metrics
    port: 24231
    targetPort: http-metrics
    protocol: TCP
  # Can be accessed using "kubectl proxy" at:
  # http://127.0.0.1:8001/api/v1/proxy/namespaces/kube-system/services/fluentd:monitor-agent/api/plugins.json
  - name: http-monitor
    port: 24220
    targetPort: http-monitor
    protocol: TCP
