stack/k8s/okro/addons/logging/logzio-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: logzio-ext
  namespace: okro-system
spec:
  hosts:
  - listener.logz.io
  ports:
  - number: 8071
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
